# NewAutoCourse

./: README.md  pyproject.toml
NewAutoCourseWindow/app/view/: main_window.py  test_interface.py
